# identity-stack

./: .gitignore  .gitleaks.toml  Makefile  README.md  docker-compose.gateway.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  ralph.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: logging_config.py  main.py  telemetry.py
backend/app/dependencies/: auth.py  fga.py  identity.py  rbac.py  tenant.py
backend/app/errors/: identity.py  problem_detail.py
backend/app/middleware/: auth.py  claims.py  correlation.py  factory.py  rate_limit.py  security.py
backend/app/models/: database.py  document.py  tenant.py
backend/app/repositories/: __init__.py  assignment.py  base.py  idp_link.py  permission.py  provider.py  role.py  sync_event.py  tenant.py  user.py
backend/app/routers/: accesskeys.py  attributes.py  auth.py  canonical_users.py  documents.py  fga.py  health.py  idp_links.py  internal.py  permissions.py  protected.py  providers.py  rbac_demo.py  reconciliation.py  roles.py  sync_status.py  tenants.py  users.py
backend/app/services/: audit.py  cache_invalidation.py  descope.py  fga.py  identity.py  identity_impl.py  identity_resolution.py  idp_link.py  inbound_sync.py  permission.py  provider.py  reconciliation.py  role.py  sync_status.py  tenant.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline_existing_tables.py  0002_canonical_identity_tables.py  001_baseline_existing_tables.py  002_canonical_identity_schema.py  003_sync_events.py
backend/scripts/: cleanup_orphaned_keys.py  seed_all.py  seed_demo.py  seed_descope.py
backend/tests/e2e/: conftest.py  test_api_authenticated.py  test_api_endpoints.py  test_api_health.py  test_api_security.py  test_async_db_migration.py  test_authenticated_ui.py  test_cache_invalidation_e2e.py  test_documents_e2e.py  test_fga_api.py  test_identity_crud_e2e.py  test_identity_repository_api.py  test_identity_repository_ui.py  test_internal_endpoints_e2e.py  test_login_page.py  test_multi_idp_e2e.py  test_page_content.py  test_rbac_api.py
backend/tests/integration/: conftest.py  test_api.py  test_canonical_users_endpoints.py  test_gateway_proxy.py  test_multi_idp_lifecycle.py  test_permission_lifecycle.py  test_reconciliation.py  test_role_lifecycle.py  test_session.py  test_sync_event_repository.py  test_sync_status_endpoints.py  test_sync_status_service.py  test_tenant_lifecycle.py  test_user_lifecycle.py
backend/tests/unit/: conftest.py  test_accesskeys_router.py  test_alembic_config.py  test_alembic_env.py  test_attributes_router.py  test_audit.py  test_auth_dependencies.py  test_auth_router.py  test_cache_invalidation.py  test_canonical_users_router.py  test_database.py  test_docker_compose.py  (+50 more)
(+119 files in other folders)
