[project]
name = "descope-saas-starter-backend"
version = "0.1.0"
description = "FastAPI backend for Descope SaaS Starter Kit"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.34.0,<1",
    "py-identity-model>=2.1.0,<3",
    "sqlmodel>=0.0.22,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
