[project]
name = "identity-stack-backend"
version = "0.1.0"
description = "FastAPI backend for Identity Stack"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.34.0,<1",
    "py-identity-model>=2.1.0,<3",
    "sqlmodel>=0.0.22,<1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "expression>=5.0",
    "httpx>=0.28,<1",
    "pydantic[email]>=2.0",
    "slowapi>=0.1.9,<1",
    "python-json-logger>=3.0,<5",
    "scalar-fastapi>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "anyio[trio]>=4.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.9",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # assert, hardcoded passwords OK in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
markers = [
    "anyio: mark test to run with anyio",
]

[dependency-groups]
dev = [
    "pip-audit>=2.9",
    "pytest-playwright>=0.7.2",
    "testcontainers[postgres]>=4.0",
]
